# jpeg-encoder

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  create_deploy_zip.ps1  docker-compose.yml
data/standard_test_images/: README.md
data/test_images/: README.md
deploy/: README.md
docs/: WEB_UI_API.md  architecture.md  dsp_theory.md  jpeg_pipeline.md  suggestions.md
examples/: api_demo.cpp  encode_basic.cpp  entropy_comparison.cpp  visualize_dct.cpp
include/jpegdsp/analysis/: JPEGAnalyzer.hpp  PipelineObserver.hpp
include/jpegdsp/api/: JPEGEncoder.hpp
include/jpegdsp/core/: Block.hpp  ColorSpace.hpp  Constants.hpp  Downsampler.hpp  Entropy.hpp  Image.hpp  ImagePadding.hpp  Logging.hpp  Types.hpp
include/jpegdsp/jpeg/: BlockEntropyEncoder.hpp  Huffman.hpp  HuffmanTables.hpp  JPEGConstants.hpp  JPEGEncoder.hpp  JPEGTypes.hpp  JPEGWriter.hpp  Quantization.hpp  RLE.hpp  ZigZag.hpp
include/jpegdsp/transforms/: DCTConstants.hpp  DCTTransform.hpp  ITransform2D.hpp
include/jpegdsp/util/: BitWriter.hpp  FileIO.hpp  Timer.hpp
prezentare_wavelet/: PRESENTATION_STRUCTURE.md  README.md  SCRIPT.md  pyrightconfig.json  requirements.txt
prezentare_wavelet/app/: main.py
prezentare_wavelet/backend/: main.py  requirements.txt
prezentare_wavelet/data/: .gitkeep
prezentare_wavelet/frontend/: TODO.md  TO_IMPLEMENT.md  index.html  package-lock.json  package.json
prezentare_wavelet/frontend/src/: App.jsx  index.css
prezentare_wavelet/frontend/src/components/: CompareView.jsx  ComplexWaveletView.jsx  ConvolutionView.jsx  DCTvsWaveletView.jsx  DecomposeView.jsx  DenoiseTheoryView.jsx  DenoiseView.jsx  FilterBankView.css  FilterBankView.jsx  FiltersView.jsx  FourierView.jsx  GuidedTour.jsx  HeisenbergBoxesView.jsx  IntroView.jsx  JPEGPipelineView.jsx  KernelsEducational.css  KernelsEducationalView.jsx  KernelsView.jsx  LaTeX.jsx  Mallat1DEduView.css  Mallat1DEduView.jsx  MallatUnifiedView.css  MallatUnifiedView.jsx  PageOverview.jsx  PyramidDecompView.css  PyramidDecompView.jsx  ReconstructionView.css  ReconstructionView.jsx  ScalogramView.jsx  SignalDemoView.jsx  WaveletBasisView.jsx  WaveletEducationView.jsx  WaveletPlayground.jsx  WaveletScanDemo.jsx
prezentare_wavelet/frontend/src/components/shared/: AnimationControls.css  AnimationControls.jsx  Graph.css  Graph.jsx  SlideHeader.css  SlideHeader.jsx  index.js
prezentare_wavelet/frontend/src/styles/: base.css  components.css  controls.css  layout.css  math.css  sidebar.css  tour.css  variables.css  wavelets.css
prezentare_wavelet/frontend/src/styles/views/: compare.css  convolution.css  decompose.css  denoise.css  filters.css  fourier.css  intro.css  jpeg.css  kernels.css  playground.css  wavelet-scan.css
prezentare_wavelet/scripts/: fourier_visualization.py  presentation_runner.py  render_all_animations.py
prezentare_wavelet/src/: __init__.py  dct.py  denoising.py  metrics.py  wavelets.py
referat/: 00_main.md  01_introducere.md  02_fundamente_teoretice.md  03_algoritmul_jpeg.md  04_alte_aplicatii.md  05_proiect_demonstrativ.md  06_concluzii.md  07_bibliografie.md  README.md  build_referat.bat
referat/figures/: README.md
scripts/: README.md  download_sprites.py  download_test_images.py  generate_educational_images.py  generate_test_images.py  test_encode_all.ps1  validate_cli.py
src/analysis/: JPEGAnalyzer.cpp  PipelineObserver.cpp
src/api/: JPEGEncoder.cpp
src/cli/: dct_demo_main.cpp  jpeg_encode_main.cpp
src/core/: Block.cpp  ColorSpace.cpp  Downsampler.cpp  Entropy.cpp  Image.cpp  ImagePadding.cpp  Logging.cpp  README.md
src/jpeg/: BlockEntropyEncoder.cpp  Huffman.cpp  JPEGEncoder.cpp  JPEGWriter.cpp  Quantization.cpp  RLE.cpp  ZigZag.cpp
src/transforms/: DCTTransform.cpp
src/util/: BitWriter.cpp  FileIO.cpp  Timer.cpp
tests/: CMakeLists.txt  README.md  TestFramework.hpp
tests/integration/: test_jpeg_encoder.cpp
tests/unit/: debug_png_load.cpp  test_block.cpp  test_colorspace.cpp  test_core_codec.cpp  test_dc_only.cpp  test_dct.cpp  test_downsampler.cpp  test_dqt_zigzag.cpp  test_entropy.cpp  test_grayscale_simple.cpp  test_huffman_dc_debug.cpp  test_imagepadding.cpp  test_jpeg_padding.cpp  test_jpeg_pipeline.cpp  test_jpegwriter.cpp  test_mcu_debug.cpp  test_quantization.cpp  test_single_block_encode.cpp  test_solid_color.cpp  test_solid_red_debug.cpp  test_synthetic.cpp  test_zigzag_verify.cpp
ui/: README.md
ui/backend/: package-lock.json  package.json
ui/backend/outputs/: precompute_cache.json
ui/backend/src/: config.ts  server.ts
ui/backend/src/routes/: cache.ts  encode.ts  health.ts  images.ts
ui/backend/src/services/: encoder.ts  precompute.ts
ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/components/: ComparisonView.tsx  DCTVisualization.css  DCTVisualization.tsx  EncodingOptions.tsx  ImageUpload.tsx  PipelineView.tsx  QualityChart.tsx  ResultsPanel.tsx  SampleImages.tsx  ThemeToggle.tsx
ui/frontend/src/hooks/: useEncoder.ts
ui/frontend/src/styles/: base.css  comparison.css  dct.css  layout.css  pipeline.css  quality-chart.css  results.css  upload.css
ui/web/: README.md  app.py  requirements.txt
ui/web/templates/: index.html
